--- a/main.css
+++ b/main.css
@@ -1,20 +1,47 @@
 * {
     padding: 0px;
     margin: 0px;
+    box-sizing: border-box;
 }
 
 header {
-    background-color: lightseagreen;
-}
-
-h1 {
-    font-size: 60px;
-    font-family: serif;
-
+    background-color: #659DBD;
+    height: 108px;
 }
 
 header img {
-    width: 150px
+    width: 100px;
+    float: left;
+}
+
+nav ul li{
+    list-style-type: none;
+    width: 165px;
+    float: left;
+    text-align: center;
+    margin-top: 11px;
+}
+nav ul li a {
+    text-decoration: none;
+    color: #FBEEC1;
+}
+.clearfix:after{
+    content: "";
+    display: table;
+    clear: both;}
+
+
+nav ul li a:hover{
+    color: orange;
+}
+
+#nadpis{
+    font-size: 30px;
+    font-family: serif;
+    text-align:center;
+    margin-bottom:20px;
+    padding-top: 20px;
+    color: black;
 
 }
 
@@ -26,8 +53,26 @@ main {
 main img {
     width: 400px;
     float: left;
+    margin: 20px 0px 10px 20px;
+}
 
+h1{
+    margin-left: 20px;
+}
 
+p {
+    margin-left: 20px;
+}
+.clearfix:after{
+    content:"";
+    display: table;
+    clear: both;
+}
+
+table {
+    border: 1px solid red;
+    width: 400px;
+    height: 200px;
 }
 footer {
     background-color: lightseagreen;
@@ -35,15 +80,9 @@ footer {
     text-align: center;
 }
 
-a {
-
-    border: 2px solid blue;
-    background-color: white;
-    text-decoration: none;
-    border-radius: 5px;
+footer a {
+    margin-right: 20px;
+    text-align: center;
 }
 
-a:hover {
-    background-color: cornflowerblue;
-    color: white;
-}
+
