--- a/main.css
+++ b/main.css
@@ -46,14 +46,13 @@ nav ul li a:hover{
 }
 
 main {
-    height: 675px;
 
 }
 
 main img {
     width: 400px;
     float: left;
-    margin: 20px 0px 10px 20px;
+
 }
 
 h1{
@@ -68,16 +67,36 @@ p {
     display: table;
     clear: both;
 }
+#text {
+    font-family: sans-serif;
+    font-size: 18px;
 
+}
 table {
-    border: 1px solid red;
     width: 400px;
     height: 200px;
+    margin: 0px auto;
+}
+
+.clearfix:after{
+    content:"";
+    display: table;
+    clear: both;
+}
+table th {
+    text-decoration: underline;
+}
+
+table td {
+    border: 1px solid black;
+}
+ul .s {
+    list-style-type: circle;
 }
 footer {
     background-color: lightseagreen;
-    height: 100px;
     text-align: center;
+    height: 50px;
 }
 
 footer a {
@@ -85,4 +104,15 @@ footer a {
     text-align: center;
 }
 
-
+html {
+    height: 100%;
+}
+body {
+    min-height: 100%;
+    display: grid;
+    grid-template-rows: 1fr auto;
+}
+.footer {
+    grid-row-start: 2;
+    grid-row-end: 3;
+}
