--- a/main.css
+++ b/main.css
@@ -1,118 +1,44 @@
+html {
+    height: 100%;
+}
+
 * {
-    padding: 0px;
-    margin: 0px;
-    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: content-box;
 }
 
 header {
-    background-color: #659DBD;
-    height: 108px;
+    background: url("images/hladina.jpeg");
+    height: 100vh;
+
+
+
+}
+
+
+footer {
+    background-color: lightseagreen;
 }
 
 header img {
     width: 100px;
+    box-sizing: content-box;
     float: left;
 }
 
-nav ul li{
-    list-style-type: none;
-    width: 165px;
-    float: left;
+header h1 {
     text-align: center;
-    margin-top: 11px;
-}
-nav ul li a {
-    text-decoration: none;
-    color: #FBEEC1;
-}
-.clearfix:after{
-    content: "";
-    display: table;
-    clear: both;}
-
-
-nav ul li a:hover{
-    color: orange;
-}
-
-#nadpis{
-    font-size: 30px;
-    font-family: serif;
-    text-align:center;
-    margin-bottom:20px;
-    padding-top: 20px;
-    color: black;
+    box-sizing: content-box;
 
 }
-
-main {
-
-}
-
-main img {
-    width: 400px;
+header nav {
     float: left;
 
-}
-
-h1{
-    margin-left: 20px;
-}
-
-p {
-    margin-left: 20px;
-}
-.clearfix:after{
-    content:"";
-    display: table;
-    clear: both;
-}
-#text {
-    font-family: sans-serif;
-    font-size: 18px;
+.clearfix:after {
 
 }
-table {
-    width: 400px;
-    height: 200px;
-    margin: 0px auto;
-}
 
-.clearfix:after{
-    content:"";
-    display: table;
-    clear: both;
-}
-table th {
-    text-decoration: underline;
-}
 
-table td {
-    border: 1px solid black;
-}
-ul .s {
-    list-style-type: circle;
-}
-footer {
-    background-color: lightseagreen;
-    text-align: center;
-    height: 50px;
-}
 
-footer a {
-    margin-right: 20px;
-    text-align: center;
-}
-
-html {
-    height: 100%;
-}
-body {
-    min-height: 100%;
-    display: grid;
-    grid-template-rows: 1fr auto;
-}
-.footer {
-    grid-row-start: 2;
-    grid-row-end: 3;
 }
