--- a/main.css
+++ b/main.css
@@ -8,17 +8,31 @@ html {
     box-sizing: content-box;
 }
 
-header {
-    background: url("images/hladina.jpeg");
-    height: 100vh;
+body {
+    background: linear-gradient(
+            to bottom,
+            rgba(0,0,0, 0),
+            rgba(255,255,255, 100)
+    ),url(images/molo2.jpeg);
 
-
-
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
+header {
 
-footer {
-    background-color: lightseagreen;
+    height: 13vh;
+
+    width: 722px;
+    margin: 0px auto;
+}
+
+main {
+    text-align: center;
+    height: 680px;
+    width: 722px;
+    margin: 0px auto;
+    font-family: sans-serif;
 }
 
 header img {
@@ -27,18 +41,56 @@ header img {
     float: left;
 }
 
+header {
+    margin-top: 10px;
+}
+
 header h1 {
+    font-family: sans-serif;
     text-align: center;
     box-sizing: content-box;
-
+    font-size: 40pt;
 }
-header nav {
+
+main h1 {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    text-align: left;
+}
+
+nav {
+    alignment: center;
+}
+
+header nav ul li {
     float: left;
+    list-style-type: none;
+    margin-left: 20px;
+    margin-top: 20px;
 
-.clearfix:after {
+}
+header nav ul li a {
+    font-family: sans-serif;
+    text-decoration: none;
+    color: white;
+    font-size: 21px;
+}
 
+header nav ul li a:hover {
+    color: coral;
 }
 
 
+footer a {
+    text-align: center;
+    text-decoration: none;
 
+}
+
+main ul {
+    margin: 50px;
+}
+
+.clearfix {
+    overflow: auto;
 }
